--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1",
   "description": "Adds custom events for mocha runner",
   "author": "Yurii Veremiienko",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "mocha": "^2.5.3"
+  }
  }
